# applitoolsify

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  __main__.py  applitoolsify.py  build.py  downloader.py  setup.cfg  setup.py
.github/workflows/: cd.yml  run-tests.yml  run_tests.yml  tests.yml
applitoolsify/: __main__.py  applitoolsify.py  archiver.py  cli.py  instrumenter.py  sdk_downloader.py  utils.py
applitoolsify/instrument_strategies/: base.py  ios.py
src/: bundle.bat  bundle.ps1  bundle.sh  config.py  entities.py  extract.py  instrument.py  instrument.spec  make_package.sh  make_python.sh
src/applitoolsify/: archiver.py  cli.py  config.py  instrumenter.py  sdk_downloader.py  sdk_manager.py  utils.py
src/applitoolsify/instrument_strategies/: __init__.py  android.py  base.py  ios.py
src/frameworks/: get_frameworks.ps1  get_frameworks.sh
tests/: conftest.py  test_e2e.py  test_instrument.py  test_instrument_androd.py  test_instrument_android.py  test_instrument_ios.py  utils.py
tests/resources/: IOSTestApp.ipa  awesomeopensource.ipa
