[bumpversion]
current_version = 0.2.0
commit = True
tag = False
message = Bump `applitoolsify` version: {current_version} → {new_version}

[bumpversion:file:src/applitoolsify/__version__.py]
[bumpversion:file:setup.cfg]
[bumpversion:file:README.md]

[bdist_wheel]
universal = True

[metadata]
name = applitoolsify
description = Add Applitools SDKs to your mobile application
author = Applitools Team
author_email = team@applitools.com
url = http://www.applitools.com
project_urls =
	Source=https://github.com/applitools/applitoolsify
version = attr: src.applitoolsify.__version__
long_description = file: README.rst
license = Applitools SDK License
license_files = LICENSE
platforms = Linux, MacOS, Windows
classifiers =
	Programming Language :: Python
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	Operating System :: MacOS
	Operating System :: Microsoft :: Windows
	Operating System :: POSIX :: Linux
	Topic :: Software Development :: Quality Assurance
	Topic :: Software Development :: Testing

[options]
packages = find:
python_requires = >=3.7, <4
zip_safe = False
